[package]
name = "integration-test"
edition = "2021"
rust-version = "1.75"

[lints.rust]
unreachable_pub = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
pedantic = "warn"

[dependencies]
chrono = "0.4"
clap = { version= "4", features = ["derive"] }
rouille = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
