[package]
name = "integration-test"
edition = "2021"
rust-version = "1.85"

[lints.rust]
unreachable_pub = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
pedantic = "warn"

[dependencies]
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
rouille = { version = "3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
